fix jump to links

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -94,6 +94,13 @@ main {
   margin-top: 3.3rem;
 }
 
+:target:before {
+  content:"";
+  display:block;
+  height:3.3rem; /* fixed header height*/
+  margin:-3.3rem 0 0; /* negative fixed header height */
+}
+
 h1{
   box-shadow: 0 1px 2px rgba($black,.3);
   background: $gray-light;
